# ODFE_robotica

./: .gitignore  CMakeLists.txt  README.md  counterDlg.ui  ejemplo1.cpp  ejemplo1.h  main.cpp  specificworker.cpp  specificworker.h
MultiRoom/: CMakeLists.txt  localiser.cdsl
MultiRoom/src/: CMakeLists.txt  specificworker.cpp  specificworker.h
advanced tasks/gridder/src/: CMakeListsSpecific.txt  mppi_controller.cpp
advanced_tasks/ainf_slamo/: last_pose.json
advanced_tasks/ainf_slamo/src/: CMakeLists.txt  specificworker.cpp
advanced_tasks/bridge_odfe/etc/: config.toml
advanced_tasks/bridge_odfe/src/: specificworker.cpp  specificworker.h
advanced_tasks/gridder_legacy/src/: grid_esdf.cpp
chocachoca/: CMakeCache.txt
chocachoca/.cmake/api/v1/reply/: cache-v2-5c29837cd0ecf7ef3e59.json  cmakeFiles-v1-ecda12405053ce72d16f.json  codemodel-v2-040e1741a6018c3455cb.json  index-2025-10-09T17-17-29-0987.json  target-ICES__home_jose_robocomp_components_ODFE_chocachoca_generated-b016d515435779197982.json  target-ICE_GenericBase_target-da3ac1d099f2a78ba2be.json  target-ICE_Lidar3D_target-ea21969fa9cee27c8ea0.json  target-ICE_OmniRobot_target-05ff3d23aa5eb7389e7b.json  target-chocachoca-fa7318cafe0ed683c5ba.json
chocachoca/etc/: config
chocachoca/src/: mainUI.ui  specificworker.cpp  specificworker.h
docs/: main.tex
docs/multimedia/task1/stateMachine/: stateMachine.drawio
docs/scripts/: plot_brake.py
initializeComponents/: sub.toml  subcognitive.py
localiser/: CMakeLists.txt
localiser/etc/: config.toml
localiser/src/: CMakeLists.txt  common_types.h  hungarian.h  mainUI.ui  munkres.hpp  ransac_line_detector.cpp  ransac_line_detector.h  room_detector.cpp  room_detector.h  specificworker.cpp  specificworker.h
multiRoom/: README.md
multiRoom/.qt/: QtDeploySupport.cmake
multiRoom/etc/: config  config.toml
multiRoom/src/: -README.txt  CMakeLists.txt  door_detector.cpp  image_processor.h  specificworker.cpp  specificworker.h
others/: update_robocomp_repos.sh
others/initializeComponents/: README.md  config.toml  personalReadme.md  subcognitive.py
others/updateRobocompRepos/: README.md  update_robocomp_repos.sh
task0_2_counterWithQTimer/: CMakeLists.txt  ejemplo1.cpp  ejemplo1.h  main.cpp
task0_4_lambdas/: taskB.cpp
tasks/0_pretasks/task0_2_counterWithQTimer/: CMakeLists.txt  README.md  counterDlg.ui  ejemplo1.cpp  ejemplo1.h  main.cpp
tasks/0_pretasks/task0_4_lambdas/: CMakeLists.txt  Theory of lambas in C++.md  main.cpp  taskB.cpp  testingLambdas.cpp
tasks/1_chocachoca/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  chocachoca.cdsl  cmake_install.cmake
tasks/1_chocachoca/.qt/: QtDeploySupport.cmake
tasks/1_chocachoca/etc/: config  config.toml
tasks/1_chocachoca/src/: CMakeLists.txt  mainUI.ui  specificworker.cpp  specificworker.h
tasks/2_localiser/: .gitignore  CMakeLists.txt  DoxyFile  README.md  localiser.cdsl
tasks/2_localiser/.qt/: QtDeploySupport.cmake
tasks/2_localiser/etc/: config.toml
tasks/2_localiser/src/: CMakeLists.txt  common_types.h  hungarian.cpp  hungarian.h  mainUI.ui  munkres.hpp  ransac_line_detector.cpp  ransac_line_detector.h  room_detector.cpp  room_detector.h  specificworker.cpp  specificworker.h
tasks/3_multiRoom/: .gitignore  CMakeLists.txt  README.md
tasks/3_multiRoom/etc/: config_helios.toml  config_pearl.toml
tasks/3_multiRoom/src/: CMakeLists.txt  common_types.h  door_detector.cpp  door_detector.h  mainUI.ui  nominal_room.h  ransac_line_detector.cpp  specificworker.cpp  specificworker.h  time_series_plotter.cpp
tasks/4_fullApartment/: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  DoxyFile  LIDAR_OMNIROBOT_DOCUMENTATION.md  README.md  multiroom.cdsl
tasks/4_fullApartment/docs/: CHANGELOG.md  LIDAR_OMNIROBOT_DOCUMENTATION.md  README.md  personalREADME.md
tasks/4_fullApartment/etc/: config.toml  config.toml.new
tasks/4_fullApartment/src/: CMakeLists.txt  common_types.h  door_detector.cpp  door_detector.h  graph.cpp  graph.h  hungarian.cpp  image_processor.h  mainUI.ui  navigation_state_machine.cpp  nominal_room.h  specificworker.cpp  specificworker.cpp.new  specificworker.h
tasks/4_fullApartment/src/DNN/: mosaic.py  test_mnist.py
tasks/4_fullApartment/src/localiser/: localiser.cpp  localiser.h
tasks/4_fullApartment/src/mnist_detector/: README.md
tasks/4_fullApartment/src/mnist_detector/etc/: config
tasks/4_fullApartment/src/mnist_detector/src/: specificworker.py
tasks/4_multiroom_advanced/: README.md  multiroom.cdsl
tasks/4_multiroom_advanced/docs/: README.md
tasks/4_multiroom_advanced/etc/: config
tasks/4_multiroom_advanced/src/: -README.txt  CMakeLists.txt  common_types.h  door_detector.cpp  graph.cpp  graph.h  hungarian.h  mainUI.ui  munkres.hpp  navigation_state_machine.h  nominal_room.h  ransac_line_detector.h  room_detector.cpp  room_detector.h  time_series_plotter.h
tasks/4_multiroom_advanced/src/DNN/: train_mnist.py
tasks/4_multiroom_advanced/src/localiser/: localiser.cpp
tasks/4_multiroom_advanced/src/mnist_detector/: MNIST.idsl
tasks/chocachoca/: cmake_install.cmake
tasks/chocachoca/.qt/: QtDeploySupport.cmake
tasks/chocachoca/src/: specificworker.cpp
tasks/localiser/src/: ransac_line_detector.h
tasks/multiRoom/: .gitignore  multiroom.cdsl
tasks/pretasks/task0_4_lambdas/: CMakeLists.txt  testingLambdas.cpp
